--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AuditoriaInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AuditoriaInventario/Index.cshtml
@@ -8,6 +8,23 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script type="text/javascript">
+    var selectedIDs;
+
+    function OnBeginCallback(s, e) {
+        //Pass all selected keys to GridView callback action
+        e.customArgs["selectedIDs"] = selectedIDs;
+        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
+    }
+    function OnSelectionChanged(s, e) {
+        s.GetSelectedFieldValues("CodMoviInven", GetSelectedFieldValuesCallback);
+
+    }
+    function GetSelectedFieldValuesCallback(values) {
+        //Capture all selected keys
+        selectedIDs = values.join(',');
+    }
+</script>
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
@@ -77,10 +94,75 @@
                 </div>
                     <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_mov_x_contabilizar">
                         <div class="row">
+                            <div class="col-md-12">                                
+                                <div class="col-md-2">
+                                    <div class="form-group">
+                                        <label for="">Fecha inicio*</label>
+                                        <div class="input-group date">
+                                            <div class="input-group-addon">
+                                                <i class="fa fa-calendar"></i>
+                                            </div>
+                                            @Html.DevExpress().DateEditFor(q => q.fecha_inicio_mov, settings =>
+                                            {
+                                                settings.Name = "fecha_inicio_mov";
+                                                settings.Properties.UseMaskBehavior = true;
+                                                settings.Properties.EditFormat = EditFormat.Date;
+                                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                            }).GetHtml()
+                                            @Html.ValidationMessageFor(q => q.fecha_inicio_mov, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-2">
+                                    <div class="form-group">
+                                        <label for="">Fecha fin*</label>
+                                        <div class="input-group date">
+                                            <div class="input-group-addon">
+                                                <i class="fa fa-calendar"></i>
+                                            </div>
+                                            @Html.DevExpress().DateEditFor(q => q.fecha_fin_mov, settings =>
+                                            {
+                                                settings.Name = "fecha_fin_mov";
+                                                settings.Properties.UseMaskBehavior = true;
+                                                settings.Properties.EditFormat = EditFormat.Date;
+                                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                            }).GetHtml()
+                                            @Html.ValidationMessageFor(q => q.fecha_fin_mov, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-2">
+                                    <div class="form-group">
+                                        <label for="IdSucursal">Tipo de Movimiento*</label>
+                                        @Html.DropDownListFor(q => q.TipoMovimiento, new SelectList(ViewBag.lst_tipo_movimiento, "Key", "Value"), new { @class = "form-control", @id = "TipoMovimiento" })
+                                        @Html.ValidationMessageFor(q => q.TipoMovimiento, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-md-2">
+                                    <div class="form-group">
+                                        <label for=""></label>
+                                        <div class="input-group">
+                                            <button type="button" title="Buscar movimientos" class="btn btn-primary" id="btn_buscar_movimientos" onclick="BuscarMovimientos();">
+                                                <i class="fa fa-search"></i>
+                                            </button>
+                                            &nbsp;&nbsp;
+                                            <button type="button" title="Contabilizar" class="btn btn-primary" id="btn_contabilizar" onclick="ContabilizarMovimientos();">
+                                                <i class="fa fa-refresh"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
                             <div class="col-md-12">
                                 <div class="col-md-12">
                                     <div class="form-group">
-
+                                        @Html.Action("GridViewPartial_MovimientosSinCont", new {fecha_ini = Model.fecha_inicio_mov, fecha_fin = Model.fecha_inicio_mov, TipoMovimiento = Model.TipoMovimiento })
                                     </div>
                                 </div>
                             </div>
@@ -252,6 +334,52 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
                 GridViewPartial_Recosteo_x_Sucursal.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function BuscarMovimientos() {
+        var datos = {
+            fecha_ini: fecha_inicio_mov.GetValue(),
+            fecha_fin: fecha_fin_mov.GetValue(),
+            TipoMovimiento: $("#TipoMovimiento").val()
+        }
+
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("BuscarMovimientos", "AuditoriaInventario", new { Area = "Inventario" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridViewPartial_MovimientosSinCont.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+    }
+    
+    function ContabilizarMovimientos() {
+        var datos = {
+            IDs: selectedIDs,
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("ContabilizarMovimientos", "AuditoriaInventario", new { Area = "Inventario" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+                GridViewPartial_MovimientosSinCont.PerformCallback();
             },
             error: function (error) {
             }
