--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AuditoriaInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AuditoriaInventario/Index.cshtml
@@ -367,6 +367,7 @@
     function ContabilizarMovimientos() {
         var datos = {
             IDs: selectedIDs,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
