--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_por_bodega.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_por_bodega.cshtml
@@ -35,22 +35,39 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
+        //settings.Columns.Add(column =>
+        //{
+        //    column.FieldName = "IdSucursal";
+        //    column.Caption = "Sucursal";
+        //    column.Width = Unit.Percentage(35);
+        //    column.EditorProperties().ComboBox(p =>
+        //    {
+        //        p.Columns.Add("IdSucursal", "ID").Width = Unit.Percentage(20);
+        //        p.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(70);
+        //        p.ValueField = "IdSucursal";
+        //        p.ValueType = typeof(int);
+        //        p.DataSource = ViewBag.lst_susucrsal;
+        //        p.Width = Unit.Percentage(100);
+        //    });
+        //});
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "Sucursal";
+            column.Width = Unit.Percentage(20);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdSucursal";
             column.Caption = "Sucursal";
-            column.Width = Unit.Percentage(35);
-            column.EditorProperties().ComboBox(p =>
+            column.Width = Unit.Percentage(20);
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
             {
-                p.Columns.Add("IdSucursal", "ID").Width = Unit.Percentage(20);
-                p.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(70);
-                p.ValueField = "IdSucursal";
-                p.ValueType = typeof(int);
-                p.DataSource = ViewBag.lst_susucrsal;
-                p.Width = Unit.Percentage(100);
+                Html.RenderPartial("_CmbSucursal_det", DataBinder.Eval(c.DataItem, "IdSucursal"));
             });
         });
-
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdBodega";
