--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Modificar.cshtml
@@ -495,5 +495,10 @@
             $("#link_general").click();
     }
 
-
+    function OnSelectedSucursalChanged() {
+        GridViewPartial_producto_por_bodega.GetEditor("IdBodega").PerformCallback();
+    }
+    function BodegaComboBox_BeginCallback(s, e) {
+        e.customArgs["IdSucursal"] = IdSucursal.GetValue();
+    }
 </script>
