--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -498,6 +498,13 @@
             $("#link_imagen").show();
             $("#link_general").click();        
     }
+
+    function OnSelectedSucursalChanged() {        
+        GridViewPartial_producto_por_bodega.GetEditor("IdBodega").PerformCallback();
+    }
+    function BodegaComboBox_BeginCallback(s, e) {
+        e.customArgs["IdSucursal"] = IdSucursal.GetValue();
+    }
 </script>
 
 
