--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbSucursal_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbSucursal_det.cshtml
@@ -15,7 +15,7 @@
         settings.Properties.ValueType = typeof(int);
         settings.Properties.Columns.Add("IdSucursal", "ID", 10);
         settings.Properties.Columns.Add("Su_Descripcion", "Descripción", 90);
-        //settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedSucursalChanged";
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedSucursalChanged";
     })
      .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_list_bajo_demanda_sucursal, new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_info_bajo_demanda_sucursal)
     .Bind(Model.GetType() == typeof(Core.Erp.Info.Inventario.in_Producto_Info) ? "" : (Model == 0 ? "" : Model));
