--- a/ERP/Core.Erp.Web/Areas/General/Views/Impuesto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Impuesto/Nuevo.cshtml
@@ -86,24 +86,8 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="info_impuesto_ctacble.IdCtaCble_vta">Cta. Cble Impuesto</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.info_impuesto_ctacble.IdCtaCble, settings =>
-               {
-                   settings.Name = "info_impuesto_ctacble.IdCtaCble";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdCtaCble";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "pc_Cuenta";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-               }).BindList(ViewBag.lst_cuentas).GetHtml()
-                    @Html.ValidationMessageFor(q => q.info_impuesto_ctacble.IdCtaCble, "", new { @class = "text-danger" })
+                    @Html.Partial("_CmbCuenta_Cta_Impuesto", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -113,24 +97,8 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="info_impuesto_ctacble.IdCtaCble_vta">Cta. Cble Vta</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.info_impuesto_ctacble.IdCtaCble_vta, settings =>
-               {
-                   settings.Name = "info_impuesto_ctacble.IdCtaCble_vta";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdCtaCble";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "pc_Cuenta";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-               }).BindList(ViewBag.lst_cuentas).GetHtml()
-                    @Html.ValidationMessageFor(q => q.info_impuesto_ctacble.IdCtaCble_vta, "", new { @class = "text-danger" })
+                    @Html.Partial("_CmbCuenta_Vta_Impuesto", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble_vta, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
