--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_rubros.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_rubros.cshtml
@@ -62,22 +62,42 @@
 
         });
 
+        //settings.Columns.Add(column =>
+        //{
+        //    column.FieldName = "IdCtaCble";
+        //    column.Caption = "Cta. contable";
+        //    column.Width = Unit.Percentage(35);
+        //    column.EditorProperties().ComboBox(p =>
+        //    {
+        //        p.Columns.Add("IdCtaCble", "Cta. contable").Width = Unit.Percentage(20);
+        //        p.Columns.Add("pc_Cuenta", "cta. contable").Width = Unit.Percentage(70);
+        //        p.ValueField = "IdCtaCble";
+        //        p.ValueType = typeof(string);
+        //        p.DataSource = ViewBag.lst_cta_contable;
+        //        p.Width = Unit.Percentage(100);
+        //    });
+        //});
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pc_Cuenta";
+            column.Caption = "Cuenta";
+            column.Width = Unit.Percentage(35);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdCtaCble";
-            column.Caption = "Cta. contable";
+            column.Caption = "Cuenta";
             column.Width = Unit.Percentage(35);
-            column.EditorProperties().ComboBox(p =>
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
             {
-                p.Columns.Add("IdCtaCble", "Cta. contable").Width = Unit.Percentage(20);
-                p.Columns.Add("pc_Cuenta", "cta. contable").Width = Unit.Percentage(70);
-                p.ValueField = "IdCtaCble";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_cta_contable;
-                p.Width = Unit.Percentage(100);
+                Html.RenderPartial("_CmbCuenta_rubros_x_sueldo", DataBinder.Eval(c.DataItem, "IdCtaCble"));
             });
         });
-      
+
 
     });
     if (ViewData["EditError"] != null){
