--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_provisiones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_provisiones.cshtml
@@ -62,37 +62,71 @@
 
         });
 
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "de_descripcion";
+            column.Caption = "Departamento";
+            column.Width = Unit.Percentage(20);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "ru_descripcion";
+            column.Caption = "Rubro";
+            column.Width = Unit.Percentage(20);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
+
+
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pc_Cuenta";
+            column.Caption = "Cuenta Credito";
+            column.Width = Unit.Percentage(35);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdCtaCble";
-            column.Caption = "Cta. contable debe";
+            column.Caption = "Cuenta";
             column.Width = Unit.Percentage(35);
-            column.EditorProperties().ComboBox(p =>
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
             {
-                p.Columns.Add("IdCtaCble", "Cta. contable").Width = Unit.Percentage(20);
-                p.Columns.Add("pc_Cuenta", "cta. contable").Width = Unit.Percentage(70);
-                p.ValueField = "IdCtaCble";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_cta_contable;
-                p.Width = Unit.Percentage(100);
+                Html.RenderPartial("_CmbCuenta_provisiones_credito", DataBinder.Eval(c.DataItem, "IdCtaCble"));
             });
+        });
+
+
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pc_Cuenta";
+            column.Caption = "Cuenta Credito";
+            column.Width = Unit.Percentage(35);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "IdCtaCble_Haber";
-            column.Caption = "Cta. contable haber";
+            column.FieldName = "IdCtaCble";
+            column.Caption = "Cuenta";
             column.Width = Unit.Percentage(35);
-            column.EditorProperties().ComboBox(p =>
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
             {
-                p.Columns.Add("IdCtaCble", "Cta. contable").Width = Unit.Percentage(20);
-                p.Columns.Add("pc_Cuenta", "cta. contable").Width = Unit.Percentage(70);
-                p.ValueField = "IdCtaCble";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_cta_contable;
-                p.Width = Unit.Percentage(100);
+                Html.RenderPartial("_CmbCuenta_provisiones_debito", DataBinder.Eval(c.DataItem, "IdCtaCble"));
             });
         });
-       
+
+
+
     });
     if (ViewData["EditError"] != null)
     {
