--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_CmbCuenta_provisiones_debito.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_CmbCuenta_provisiones_debito.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "ParametrosContable", Action = "CmbCuenta_rubros_x_sueldo", Area = "RRHH" };
+        settings.CallbackRouteValues = new { Controller = "ParametrosContable", Action = "CmbCuenta_provisiones_debito", Area = "RRHH" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pc_Cuenta";
@@ -17,7 +17,7 @@
         settings.Properties.Columns.Add("pc_Cuenta", "Cuenta", 90);
         settings.Properties.FilterMinLength = 3;
     })
-     .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.ParametrosContableController().get_list_bajo_demanda, new Core.Erp.Web.Areas.RRHH.Controllers.ParametrosContableController().get_info_bajo_demanda)
+     .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.ParametrosContableController().get_list_bajo_demanda_prov_debito, new Core.Erp.Web.Areas.RRHH.Controllers.ParametrosContableController().get_info_bajo_demanda_prov_debito)
     .Bind((Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_Parametros_Info) || Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_Config_Param_contable_Info) || Model.GetType() == typeof(List<Core.Erp.Info.RRHH.ro_Config_Param_contable_Info>)) ? "" : Model);
     }
 @comboBox.GetHtml()
